[tool.poetry]
name = "advent-of-code-template"
version = "0.1.0"
description = "Template of my solutions to Advent of Code https://adventofcode.com/"
authors = ["Mushinako <8977737+Mushinako@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.11.1"
colorama = "^0.4.6"
matplotlib = "^3.6.2"
networkx = "^2.8.8"
requests = "^2.28.1"
pillow = "^9.3.0"
PyYAML = "^6.0"
tzdata = "^2022.7"

[tool.poetry.group.dev.dependencies]
pip = "^22.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
